argocd/applications/backstage/ingress.yaml
apiVersion: traefik.us/v1alpha1
kind: IngressRoute
metadata:
  name: backstage
  namespace: backstage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`backstage.proompteng.ai`)
      kind: Rule
      services:
        - name: backstage
          port: 7007
  tls:
    certResolver: default
